# lua-config-analyzer

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml  typos.toml
crates/emmylua_code_analysis/: Cargo.toml  README.md
crates/emmylua_code_analysis/locales/: codestyle.yml  data_validator.yml  lint.yml  luaconfig.yml
crates/emmylua_code_analysis/resources/: schema.json
crates/emmylua_code_analysis/resources/std/: bit.lua  bit32.lua  builtin.lua  coroutine.lua  debug.lua  ffi.lua  global.lua  io.lua  jit.lua  luaconfig.lua  math.lua  os.lua  package.lua  string.lua  table.lua  utf8.lua
crates/emmylua_code_analysis/resources/std/jit/: profile.lua  util.lua
crates/emmylua_code_analysis/resources/std/string/: buffer.lua
crates/emmylua_code_analysis/resources/std/table/: clear.lua  new.lua
crates/emmylua_code_analysis/src/: lib.rs
crates/emmylua_code_analysis/src/compilation/: mod.rs
crates/emmylua_code_analysis/src/compilation/analyzer/: config_data.rs  infer_cache_manager.rs  mod.rs
crates/emmylua_code_analysis/src/compilation/test/: and_or_test.rs  annotation_test.rs  array_test.rs  attribute_test.rs  closure_generic.rs  closure_param_infer_test.rs  closure_return_test.rs  decl_test.rs  diagnostic_disable_test.rs  export_test.rs  flow.rs  for_range_var_infer_test.rs  generic_test.rs  infer_str_tpl_test.rs  inherit_type.rs  mathlib_test.rs  member_infer_test.rs  metatable_test.rs  mod.rs  module_annotation.rs  multi_return.rs  out_of_order.rs  overload_field.rs  overload_test.rs  pcall_test.rs  return_unwrap_test.rs  static_cal_cmp.rs  syntax_error_test.rs  tuple_test.rs  type_check_test.rs  unpack_test.rs
crates/emmylua_code_analysis/src/config/: config_loader.rs  mod.rs
crates/emmylua_code_analysis/src/config/configs/: code_action.rs  codelen.rs  completion.rs  diagnostics.rs  doc.rs  document_color.rs  hover.rs  inlayhint.rs  inline_values.rs  mod.rs  references.rs  reformat.rs  resource.rs  runtime.rs  semantictoken.rs  signature.rs  strict.rs  workspace.rs
crates/emmylua_code_analysis/src/config/flatten_config/: mod.rs  (+1 more)
crates/emmylua_code_analysis/src/db_index/: mod.rs  semantic_decl.rs  traits.rs
crates/emmylua_code_analysis/src/diagnostic/: lua_diagnostic.rs  lua_diagnostic_code.rs  lua_diagnostic_config.rs  mod.rs
crates/emmylua_code_analysis/src/locale/: mod.rs
crates/emmylua_code_analysis/src/profile/: mod.rs
crates/emmylua_code_analysis/src/resources/: best_resource_path.rs  mod.rs
crates/emmylua_code_analysis/src/semantic/: guard.rs  mod.rs
crates/emmylua_code_analysis/src/test_lib/: mod.rs
crates/emmylua_code_analysis/src/vfs/: document.rs  file_id.rs  file_uri_handler.rs  loader.rs  mod.rs  virtual_url.rs
crates/emmylua_code_style/: Cargo.toml  README.md
crates/emmylua_code_style/src/: cmd_args.rs  lib.rs
crates/emmylua_code_style/src/format/: formatter_context.rs  mod.rs  syntax_node_change.rs
crates/emmylua_code_style/src/style_ruler/: basic_space.rs  mod.rs
crates/emmylua_code_style/src/styles/: lua_indent.rs  mod.rs
crates/emmylua_code_style/src/test/: mod.rs
crates/emmylua_diagnostic_macro/: Cargo.toml  README.md
crates/emmylua_diagnostic_macro/src/: lib.rs
crates/emmylua_ls/: Cargo.toml  README.md
crates/emmylua_ls/locales/: misc.yaml
crates/emmylua_ls/locales/action/: zh_CN.yaml
crates/emmylua_ls/locales/keywords/: en.yaml  zh_CN.yaml  zh_HK.yaml
crates/emmylua_ls/locales/tags/: en.yaml  zh_CN.yaml  zh_HK.yaml
crates/emmylua_ls/src/: cmd_args.rs  lib.rs
crates/emmylua_ls/src/context/: client.rs  client_id.rs  file_diagnostic.rs  lsp_features.rs  mod.rs  snapshot.rs  status_bar.rs  workspace_manager.rs
crates/emmylua_ls/src/handlers/: mod.rs  notification_handler.rs  request_handler.rs  response_handler.rs
crates/emmylua_ls/src/logger/: best_log_path.rs  mod.rs
crates/emmylua_ls/src/meta_text/: mod.rs
crates/emmylua_ls/src/server/: connection.rs  error.rs  lsp_server.rs  main_loop.rs  message_processor.rs  mod.rs
crates/emmylua_ls/src/util/: desc.rs  mod.rs  module_name_convert.rs  time_cancel_token.rs
crates/emmylua_ls/std_i18n/bit/: meta.yaml
crates/emmylua_ls/std_i18n/bit32/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/builtin/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/coroutine/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/debug/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/ffi/: meta.yaml
crates/emmylua_ls/std_i18n/global/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/io/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/jit/: meta.yaml
crates/emmylua_ls/std_i18n/math/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/os/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/package/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/string/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/table/: meta.yaml  zh_CN.yaml
crates/emmylua_ls/std_i18n/utf8/: meta.yaml  zh_CN.yaml
crates/emmylua_parser/: Cargo.toml  README.md
crates/emmylua_parser/locales/: app.yml
crates/emmylua_parser/src/: lib.rs
crates/emmylua_parser/src/grammar/: mod.rs
crates/emmylua_parser/src/kind/: lua_language_level.rs  lua_non_std_symbol.rs  lua_operator_kind.rs  lua_syntax_kind.rs  lua_token_kind.rs  lua_type_operator_kind.rs  lua_version.rs  lua_visibility_kind.rs  mod.rs
crates/emmylua_parser/src/lexer/: lexer_config.rs  lua_doc_lexer.rs  lua_lexer.rs  mod.rs  test.rs  token_data.rs
crates/emmylua_parser/src/parser/: lua_doc_parser.rs  lua_parser.rs  marker.rs  mod.rs  parser_config.rs
crates/emmylua_parser/src/parser_error/: mod.rs
crates/emmylua_parser/src/syntax/: mod.rs
crates/emmylua_parser/src/text/: line_index.rs  mod.rs  reader.rs  test.rs  text_range.rs
crates/emmylua_parser_desc/: Cargo.toml  README.md
crates/emmylua_parser_desc/src/: lib.rs  ref_target.rs  testlib.rs  util.rs
crates/emmylua_parser_desc/src/lang/: lua.rs  mod.rs
crates/emmylua_parser_desc/src/markdown/: mod.rs  test.rs
crates/emmylua_parser_desc/src/markdown_rst/: mod.rs  test.rs
(+497 files in other folders)
