[package]
name = "emmylua_code_style"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
emmylua_parser.workspace = true
rowan.workspace = true
serde_json.workspace = true
serde_yml.workspace = true

[dependencies.clap]
workspace = true
optional = true

[dependencies.mimalloc]
workspace = true
optional = true

[[bin]]
name = "emmylua_format"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:mimalloc"]
